[tool.poetry]
name = "new-pokemon"
version = "0.1.0"
description = "A Pokemon battles simulator"
authors = ["MiguelCoello37 <miguelcoellorodriguez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
